CMAKE_MINIMUM_REQUIRED (VERSION 2.6)

SET(IMAGE_HEADERS
  image.hpp
  image_impl.hpp
)

SET(ADABOOST_HEADERS
  weak_classifiers.hpp
  AdaBooster.hpp
  AdaBooster_impl.hpp
)

SET(SEX_IDENTIFICATION_SOURCE
  main.cpp
)

SET(SEX_IDENTIFICATION_HEADERS
  weak_classifiers.hpp ${IMAGE_HEADERS} ${ADABOOST_HEADERS}
)

ADD_EXECUTABLE (sex_identification ${SEX_IDENTIFICATION_SOURCE} ${SEX_IDENTIFICATION_HEADERS} ${IMAGE_HEADERS})